--- a/app/styles/colors.scss
+++ b/app/styles/colors.scss
@@ -1,6 +1,8 @@
 $whitecolor: #fff;
-$font-color: #000;
+$font-color: #202326;
 $main-green: #62bf43;
 $body-background: #f0f5f5;
 
 $mainfont: Montserrat Regular, sans-serif;
+$h3font: Montserrat Ekstrabold, sans-serif;
+$lightfont: Montserrat Light, sans-serif;
