--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -180,6 +180,18 @@ a.ship {
   margin-left: auto; 
 }
 
+input.ng-invalid.ng-touched {
+  background-color: pink;
+}
+
+input.ng-valid.ng-touched {
+  background-color: lightgreen;
+}
+
+.spaceout {
+  height: 100px;
+}
+
 
 .footer {
   padding: 25px;
